# mirada-ai

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
config/: eval.json  model.json  training.json
docs/: README.md
mirada-lib/: Cargo.toml
mirada-lib/src/: batcher.rs  consts.rs  data.rs  database.rs  dataset.rs  eval.rs  inference.rs  lib.rs  math.rs  metrics.rs  model.rs  output.rs  residual.rs  training.rs
queries/: fetch.csv  split_20.csv  split_80.csv  train.csv  valid.csv
result/: model.json  result.txt  training.json
results/18/: result.txt  training.json
results/base/: model.json  result.txt  training.json
results/best/: model.json  result.txt  training.json
results/old/1 (bad)/: result.txt
results/old/10 (bad)/: result.txt  training.json
results/old/11 (bad)/: result.txt  training.json
results/old/12 (bad)/: result.txt  training.json
results/old/13 (bad)/: result.txt  training.json
results/old/14 (bad)/: result.txt  training.json
results/old/15 (bad)/: result.txt  training.json
results/old/16 (bad)/: result.txt  training.json
results/old/17 (bad)/: result.txt  training.json
results/old/2 (bad)/: result.txt
results/old/3 (bad)/: model.json  result.txt
results/old/4 (bad)/: model.json  result.txt  training.json
results/old/5 (bad)/: result.txt  training.json
results/old/6 (bad)/: result.txt  training.json
results/old/7 (bad)/: result.txt  training.json
results/old/8 (bad)/: model.json  result.txt
results/old/9 (bad)/: model.json  result.txt  training.json
scripts/: gen-nvda-fetch.py  split-nvda-data.py
src/: cli.rs  csv.rs  data_dump.rs  dump.rs  eval.rs  fetch.rs  main.rs  predict.rs  train.rs  utils.rs
