cargo-features = ["profile-rustflags"]

[workspace]
members = ["mirada-lib"]

[workspace.dependencies]
time = "0.3.44"
log = { version = "0.4.29", features = ["max_level_info"] }
serde = { version = "1.0.217", features = ["derive"] }

[package]
name = "mirada-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
yahoo_finance_api = { version = "4.1.0", features = ["blocking"] }
mirada-lib = { path = "mirada-lib", features = ["cuda"] }
csv = "1.4.0"
log = { workspace = true }
serde = { workspace = true }
time = { workspace = true, features = ["macros"] }
