cargo-features = ["profile-rustflags"]

[workspace]
members = ["mirada-lib"]

[workspace.dependencies]
time = "0.3.47"
log = { version = "0.4.29" }
serde = { version = "1.0.228", features = ["derive"] }

[package]
name = "mirada-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
env_logger = "0.11.8"
yahoo_finance_api = { version = "4.1.0", features = ["blocking"] }
mirada-lib = { path = "mirada-lib", features = ["cuda"] }
csv = "1.4.0"
trading-calendar = "0.2.3"
rayon = "1.11.0"
log = { workspace = true }
serde = { workspace = true }
time = { workspace = true, features = ["macros"] }
